== Version 1.3.3.7 ==
* New message ("orangered envelope") notifications for reddit.
* Ignore "www." domain prefix when determining bar persistence.
* Submission bar now fetches the full list of subscribed subreddits.
* Url bar icons no longer respond to right-click.
* Fix multiple issues with redirects and bar replacement. Thanks Pappenheimer!
* Fix "preload" reddit scraping to work with updated reddit DOM.
* Fix limiting parameter in info API calls.

== Version 1.3.3.1 ==
* Compatibility bump to satisfy Firefox 3.5.1.

== Version 1.3.3 ==
* Support for Firefox 3.5.
* Submission title text box now spell checked.
* Fix visual issues in the preferences window for Mac users.
* Fix display of character entities in reddit submission titles.

== Version 1.3.2.1 ==
* Workaround for null subreddit bug.

== Version 1.3.2 ==
* Fix namespace pollution.
* Fix Ctrl-arrow cursor movement in submit bar textbox.
* Fix spurious bar triggering on subreddit listings and some profile page links.
* Fix invalid score calculation when score unknown.
* Fix minor bug when canceling adding a site.
* Fix minor internal cleanup bug in the site dropdown.
* Revert to smaller /login/ path for modhash scraping on older reddit sites.

== Version 1.3.1 ==
* Add error-checking to JSON parsing
* Fix bug where 0 votes would show up as "Unknown" in score tooltips.

== Version 1.3.0 ==
* Support for Firefox 3.1 beta 2.
* Support for jQuery-enabled reddit.com DOM.
* Optional automatic refresh interval for the info bar.
* Clicking the score in a reddit info bar manually refreshes it.
* New internal API version compatibility system.
* Fixed several bugs by using more robust info requests.
* Fixed the internal capitalization of the "persistmode" preference for consistency.