@@ -112,18 +112,21 @@
         let auth = this.linkInfo.API.auth;
 
         // Watch the site's authentication status and change UI accordingly
-        function updateLoggedIn(loggedIn) {
-          self.setAttribute("isloggedin", loggedIn);
+        function updateAuthState(isLoggedIn) {
+          self.setAttribute("isloggedin", isLoggedIn);
         }
-        updateLoggedIn(auth.isLoggedIn);
-        this._removeAuthStateWatch = auth.onStateChange.watch(updateLoggedIn);
+        this._removeAuthStateWatch = auth.onStateChange.watch(updateAuthState);
         
         // Watch for changes in logged in username and update the button
         function updateUsername(username) {
           self.buttonProfile.setAttribute("tooltiptext", "&profile.tooltipPre; ("+username+")");
         }
-        updateUsername(auth.username);
         this._removeUsernameWatch = auth.onUsernameChange.watch(updateUsername);
+        
+        auth.getAuthInfo(function(authInfo) {
+          updateAuthState(authInfo.isLoggedIn);
+          updateUsername(authInfo.username);
+        }).perform();
         
         this.update();
         this.afterBound();
