@@ -413,7 +413,9 @@ RedditSite.prototype.createBarContentUI = function(document, linkInfo) {
     }, false);
     
     this.buttonProfile.addEventListener("click", function(e) {
-      Socialite.utils.openUILink(subredditURL()+"user/"+barContent.linkInfo.API.auth.username+"/", e);
+      barContent.linkInfo.API.auth.getAuthInfo(function(authInfo) {
+        Socialite.utils.openUILink(subredditURL()+"user/"+authInfo.username+"/", e);
+      }).perform();
     }, false);
     
     this.buttonLogin.addEventListener("click", function(e) {
